fix overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -20,3 +20,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@media only screen and (max-width: 1000px){
+  body {
+    justify-content: left;
+  }
+}
